# pdf-parser

./: .gitignore  README.md  Taskfile.yml
.github/workflows/: build-windows.yml
backend/: pyproject.toml
backend/pyinstaller/: pdf-parser.spec
backend/src/: __init__.py  config.py  exporter.py  main.py  pipeline.py
backend/src/adapters/: __init__.py  _shared.py  base.py  bilingual_de_en.py  crayon_da.py  danish.py  english.py  generic.py  kmd_da.py  microsoft_dk.py  sap_da.py
backend/src/api/: __init__.py  app.py  routes.py  schemas.py
backend/src/domain/: __init__.py  invoice.py
backend/src/parsers/: __init__.py  normalization.py  pdf_parser.py
backend/tests/: test_pdf_parser.py
docs/brainstorms/: visual-adapter-builder-requirements.md
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/components/: InvoiceRow.tsx  InvoiceTable.tsx  StatusBadge.tsx  SummaryCards.tsx
frontend/src/hooks/: useInvoices.ts
frontend/src/types/: api.ts
