[project]
name = "pdf-invoice-parser"
version = "0.1.0"
description = "Parse PDF invoices into a canonical model using adapter-based extraction"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pypdf",
    "openpyxl",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "ruff",
    "pyinstaller",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
